* Tweak spacing of graphs